--- a/styles/admin/DashboardOverview.module.css
+++ b/styles/admin/DashboardOverview.module.css
@@ -152,7 +152,7 @@
   
   @media (min-width: 1024px) {
     .stockAlertsContainer {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(4, 1fr);
     }
   }
   
@@ -240,7 +240,7 @@
 
     .stockAlertsContainer {
       padding: 0px;
-      margin-top: 100px;
+      /* margin-top: 100px; */
     margin-bottom: 0px;
     }
     .card {
