--- a/styles/admin/DashboardOverview.module.css
+++ b/styles/admin/DashboardOverview.module.css
@@ -137,6 +137,117 @@
     color: #666666;
   }
 
+
+
+
+
+
+
+
+/* for stock  */
+.stockAlertsWrapper {
+  margin: 1rem 0;
+}
+
+.toggleButtonContainer {
+  text-align: right;
+  margin-bottom: 1rem;
+}
+
+.toggleButton {
+  background-color: #007bff;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
+
+.toggleButton:hover {
+  background-color: #0056b3;
+}
+
+.stockAlertsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.stockAlert {
+  display: flex;
+  align-items: center;
+  background: white;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 300px;
+}
+
+.iconContainer {
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.cardContent {
+  flex: 1;
+}
+
+.cardTitle {
+  margin: 0;
+  font-size: 1.2rem;
+  color: #333;
+}
+
+.cardValue {
+  margin: 0.5rem 0 0;
+  font-size: 1rem;
+  color: #555;
+}
+
+.detailsButton {
+  margin-top: 0.5rem;
+  padding: 0.3rem 0.8rem;
+  font-size: 0.9rem;
+  color: white;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.detailsButton:hover {
+  background-color: #0056b3;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   .stockAlertsContainer {
     display: grid;
     grid-template-columns: 1fr;
@@ -215,7 +326,7 @@
     padding: 20px;
     border-radius: 8px;
     width: 300px;
-    text-align: center;
+    text-align: start;
   }
   
   .popupContent button {
@@ -239,7 +350,7 @@
    }
 
     .stockAlertsContainer {
-      padding: 0px;
+      padding: 10px 0;
       /* margin-top: 100px; */
     margin-bottom: 0px;
     }
