--- a/styles/admin/DashboardOverview.module.css
+++ b/styles/admin/DashboardOverview.module.css
@@ -203,7 +203,7 @@
   flex: 1;
 }
 
-.cardTitle {
+/* .cardTitle {
   margin: 0;
   font-size: 1.2rem;
   color: #333;
@@ -213,7 +213,7 @@
   margin: 0.5rem 0 0;
   font-size: 1rem;
   color: #555;
-}
+} */
 
 .detailsButton {
   margin-top: 0.5rem;
