--- a/styles/admin/order/OrderId.module.css
+++ b/styles/admin/order/OrderId.module.css
@@ -426,6 +426,12 @@ background-color: rgba(242, 61, 20, 0.571);
 /* Responsive design */
 @media (max-width: 768px) {
   
+  .ViewProduct {
+    padding: 5px 5px;
+    
+    display: flex;
+    justify-content: center;
+  }
   .ShippingInformation h1{ 
     display: flex;
     flex-direction: column;
@@ -443,6 +449,7 @@ background-color: rgba(242, 61, 20, 0.571);
     padding: 0px;
   }.orderContainer {
     padding: 0px;
+    margin: 60px 0;
   }
   .orderDetails {
     flex-direction: column;
@@ -458,9 +465,7 @@ background-color: rgba(242, 61, 20, 0.571);
     margin: 0 0 20px 0px;
           
   }
-  .productCard {
-    gap: 0px;
-   
+  .productCard {  
     padding: 10px 0;
   }
 
