--- a/styles/admin/home/banner.module.css
+++ b/styles/admin/home/banner.module.css
@@ -210,6 +210,9 @@
 /* Responsive styles */
 @media (max-width: 768px) {
  
+  .bannerItem {
+    width: 100%;
+  }
   .gridItemContainer {
     flex-direction: column;
   }
