--- a/app/admin/components/components/SendNewsletter.module.css
+++ b/app/admin/components/components/SendNewsletter.module.css
@@ -104,6 +104,9 @@
     .container {
       padding: 0px;
     }
+    .container  h2{
+      text-align: start;
+    }
 
     .form input[type="text"],
     .form input[type="email"],
