--- a/styles/admin/DashboardOverview.module.css
+++ b/styles/admin/DashboardOverview.module.css
@@ -343,7 +343,7 @@
   }
   
   .cardTitlestock {
-    color: #333;
+    color: #fff;
     font-size: 1rem;
     font-weight: 600;
     margin: 10px 0;
