--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1058,8 +1058,8 @@ gap: 20px;
   .title_heading {
     word-break: break-all;
     font-size: 1.5rem;
-    font-weight: 550;
-    color: #2a2a2a;
+    font-weight: 650;
+    color: #000;
     margin: 20px 0;
   }
 
