--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -392,12 +392,12 @@
 
 .navItems li {
   position: relative; /* Needed for the pseudo-element */
-  margin: 0rem 1.2rem;
+  margin: 0rem 1rem;
  
 }
  
 .navItems li a {
-  color: #333;
+  color: #111;
   text-decoration: none;
   background: none;
   border: none;
@@ -405,7 +405,7 @@
   font-size: 1.2rem;
   font-weight: 500;
   text-transform: capitalize;
-  padding: 10px 0 10px 10px;
+  /* padding: 10px 0 10px 10px; */
   /* border-radius: 5px; */
   transition: color 0.3s ease, background-color 0.3s ease;
   width: 100%;
@@ -414,6 +414,13 @@
   align-items: center;
   text-align: center;
   margin: 0;
+  padding: 7px 0 7px 7px;
+    text-transform: capitalize;
+    color: #000;
+    font-weight: 400;
+    font-size: medium;
+    line-height: 1.4;
+    letter-spacing: 0.4px;
   /* font-family: fangsong; */
   border-bottom: 2px solid #f3f3f3;
 }
@@ -523,14 +530,29 @@
 }
 
 .closeBtn {
-  font-size: 2.24rem;
+  /* font-size: 2.24rem;
   color: #ff6347;
   background: none;
   border: none;
   cursor: pointer;
  margin: 0;
  padding: 0;
-  transition: transform 0.3s ease, color 0.3s ease;
+  transition: transform 0.3s ease, color 0.3s ease; */
+
+
+    color: #f84627;
+    padding: 0;
+    transition: transform .3s ease, color .3s ease;
+    /* background: red; */
+    border-radius: 50%;
+    height: 25px;
+    width: 25px;
+    display: flex
+;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+    border: 2px solid #e9472a;
 }
 
 
@@ -763,7 +785,7 @@
     }
 
     .navbarHeader {
-      gap: 10%;
+      gap: 5%;
     }
     
 
@@ -939,11 +961,11 @@
 }
 
 .icons a svg {
-  color:  #fff;
+  color:  #000;
   margin: 0 2px;
   /* transition: color 0.3s ease; */
   
-  background-color: #f23e14;
+  /* background-color: #f23e14; */
   border: none;
   cursor: pointer;
   font-size: 1.4rem;
@@ -1054,5 +1076,12 @@
   .navItems li a {
     /* color: #333; */
     font-size: 1rem;
+    padding: 7px 0 7px 7px;
+    text-transform: capitalize;
+    color: #000;
+    font-weight: 400;
+    font-size: medium;
+    line-height: 1.4;
+    letter-spacing: 0.4px;
   }
 }
