--- a/styles/components/category.module.css
+++ b/styles/components/category.module.css
@@ -21,11 +21,11 @@
 
   .categoryHeadingtitle {
     font-size: 2.25rem;
-    color: #2a2a2a;
+    color: #000;
     margin: 50px 0 20px 0;
     font-family: ui-monospace;
     text-transform: capitalize;
-    font-weight: 550;
+    font-weight: 650;
   }
 
 
@@ -186,12 +186,12 @@
 
   
     .arrow {
-      font-size: 20px;
+      font-size: 10px;
       padding: 5px;
-        margin-top: 5px;
-        width: 20px;
-        height: 20px;
-        transform: translateY(0%);
+      margin-top: 5px;
+      width: 15px;
+      height: 15px;
+      transform: translateY(0);
 
     }
   }
