--- a/styles/components/banner.module.css
+++ b/styles/components/banner.module.css
@@ -255,6 +255,11 @@ align-items: center;
 
   .prevButton,
   .nextButton {
-    padding: 8px;
+    /* padding: 8px; */
+    width: 25px;
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        padding: 0;
   }
 }
