--- a/styles/components/banner.module.css
+++ b/styles/components/banner.module.css
@@ -260,6 +260,7 @@ align-items: center;
         height: 25px;
         display: flex;
         justify-content: center;
+        align-items: center;
         padding: 0;
   }
 }
