--- a/styles/components/category.module.css
+++ b/styles/components/category.module.css
@@ -82,7 +82,7 @@
     /* flex: 0 0 calc(100% / 6);  */
     /* flex: 0 0 calc(100% / 9);  */
     /* 3 items per slide */
-    padding: 10px;
+    padding: 0 8px 0 8px;
     box-sizing: border-box;
   }
 
@@ -93,6 +93,10 @@
     font-style: normal;
     color: inherit;
     text-decoration: inherit;
+  }
+
+  .categoryLink:hover {
+    color: #f23e14;
   }
   
   .categoryheading {
@@ -172,11 +176,11 @@
 
     
     .previewImage { 
-      width: 70px;
+      width: 105px;
     }
     .categoryheading {
       padding: 0 0;
-      font-size: .65rem;
+      font-size: .75rem;
       
     }
 
