--- a/styles/components/category.module.css
+++ b/styles/components/category.module.css
@@ -83,6 +83,7 @@
     /* flex: 0 0 calc(100% / 9);  */
     /* 3 items per slide */
     padding: 0 8px 0 8px;
+    /* padding: 10px; */
     box-sizing: border-box;
   }
 
@@ -124,6 +125,10 @@
     box-sizing: 0px 6px 32px rgba(0, 0, 0, .04);
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
     box-shadow: #f2f2f2 0px 0px 21px;
+  }
+
+  .categoryheading:hover {
+    color: #f23e14;
   }
   
   .previewImage {
@@ -179,9 +184,24 @@
       width: 105px;
     }
     .categoryheading {
-      padding: 0 0;
+      /* padding: 0 0;
       font-size: .75rem;
-      
+      box-shadow: 0 0 #0000,
+       0 0 #0000, 0 0 #0000, 
+       0 0 #0000, 
+       0px 6px 32px rgba(0, 0, 0, .04); */
+       padding: 0;
+        font-size: .75rem;
+        box-shadow: 0 0 #0000, 0 0 #0000, 0 0 #0000, 0 0 #0000, 0px 6px 32px rgba(0, 0, 0, .04);
+        font-size: .875rem;
+        line-height: 1.25rem;
+        padding-bottom: .5rem;
+        padding-top: .5rem;
+        padding-left: .75rem;
+        padding-right: .75rem;
+        border-bottom-right-radius: 1rem;
+        border-bottom-left-radius: 1rem;
+        color: #000;
     }
 
     .categoryList { 
