--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -571,6 +571,17 @@ gap: 20px;
    /* Ensures the image fills the container */
   transition: transform 0.4s ease;
   border-radius: 8px;
+  width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform .4s ease;
+    border-radius: 8px;
+    transition-duration: .3s;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    border-radius: .75rem;
+    display: block;
+    /* vertical-align: middle; */
 }
 
 .product_container:hover .product_list_images {
@@ -675,13 +686,36 @@ gap: 20px;
 }
 
 .product_list_containet h4 {
-  font-size: 1.1rem;
+  /* font-size: 1.1rem;
   margin-bottom: 8px;
   font-weight: 450;
   color: #333;
   text-transform: capitalize;
   transition: color 0.3s, transform 0.3s;
-  margin: 0; 
+  margin: 0;  */
+
+  letter-spacing: 0;
+        padding: 0;
+        word-break: break-all;
+        gap: 0;
+        justify-content: flex-start;
+        align-items: flex-start;
+        color: #000;
+        display: flex;
+        font-weight: 600;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        /* display: block; */
+        color: inherit;
+        text-decoration: inherit;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(.4,0,.2,1);
+        text-transform: capitalize;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        white-space: nowrap;
+        margin: 0;
+        transition-duration: .3s;
 }
 
 .product_list_containet h4:hover {
@@ -1070,7 +1104,18 @@ gap: 20px;
   }
 
   .mainproduct_images {
-    height: 150px;
+    /* height: 150px; */
+    transition: transform .4s ease;
+        border-radius: 8px;
+        transition-duration: .3s;
+        transition-property: all;
+        transition-timing-function: cubic-bezier(.4,0,.2,1);
+        border-radius: .75rem;
+        display: block;
+        /* vertical-align: middle; */
+        height: auto;
+        width: 230px;
+        aspect-ratio: 10 / 13;
   }
 
   .product_list_images {
