--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -245,6 +245,11 @@
   animation: none; 
 }
 
+.homeactive svg,
+ span {
+  color: #ff6347;
+}
+
 .hamburger:hover .bar:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px); 
 }
