--- a/styles/components/Footer.module.css
+++ b/styles/components/Footer.module.css
@@ -47,14 +47,14 @@
 
 .benefitItem h3 {
   font-size: 1rem;
-  color: #333;
+  color: inherit;
   margin-bottom: 5px;
   font-weight: 600;
 }
 
 .benefitItem p {
   font-size: 0.85rem;
-  color: #666;
+  color: inherit;
   margin: 5px;
 }
 
@@ -237,6 +237,12 @@
 
 /* Responsive Design */
 @media (max-width: 768px) {
+
+  .footer {
+    display: none; 
+  }
+
+
   .benefitContainer {
     text-align: left;
         justify-content: flex-start;
@@ -248,7 +254,7 @@
         margin-top: 40px;
         padding: 30px 0 30px;
         gap: 5px;
-        margin: 0 auto;
+        margin: 0 0px 40px 0;
   }
 
 
@@ -263,7 +269,7 @@
 
 .benefitItem h3 {
   font-size: .95rem;
-  color: #666;
+  color: inherit;
   margin: 5px ;
    font-weight: 600;
    
