--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -90,6 +90,11 @@ gap: 20px;
 }
 
 
+.conmmanClassname {
+  display: flex;
+    gap: 5px;
+}
+
 .conmmanClassname .fa-star {
   color: #ffc107;
 }
@@ -437,7 +442,7 @@ gap: 20px;
   cursor: pointer;
   border-radius: 6px;
   padding: 5px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1); */
   overflow: hidden;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
   display: flex;
@@ -713,7 +718,7 @@ gap: 20px;
         text-transform: capitalize;
         font-size: 1rem;
         line-height: 1.5rem;
-        white-space: nowrap;
+        /* white-space: nowrap; */
         margin: 0;
         transition-duration: .3s;
 }
@@ -752,7 +757,7 @@ gap: 20px;
 }
 
 .price_containet p {
-  margin: 0;
+  margin: 15px 0 0;
 }
 
 .price  {
@@ -771,6 +776,10 @@ gap: 20px;
   font-size: 1rem;
   /* margin-top: 12px; */
 }
+
+
+
+
 
 
 
@@ -1114,7 +1123,7 @@ gap: 20px;
         display: block;
         /* vertical-align: middle; */
         height: auto;
-        width: 230px;
+        /* width: 230px; */
         aspect-ratio: 10 / 13;
   }
 
@@ -1150,15 +1159,18 @@ gap: 20px;
   .price_containet {
     display: flex;
     align-items: flex-start;
-    gap: 5px;
+    gap: 20px;
     font-size: 1rem;
     margin: 4px 0;
   }
   .price {
     font-size: 1.2rem;
     margin: 4px 0;
-    font-weight: 450;
+    font-weight: 700;
     letter-spacing: 0;
+    color: inherit;
+    line-height: 1.75rem;
+    
   }
 
 
