--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -461,7 +461,7 @@ gap: 20px;
 
 .productItem:hover {
   background-color: #fdfdfd;
-  box-shadow: 1px 6px 12px rgba(1, 2, 2, 0.2);
+  /* box-shadow: 1px 6px 12px rgba(1, 2, 2, 0.2); */
 }
 
 .productImage {
@@ -1121,10 +1121,10 @@ gap: 20px;
         transition-timing-function: cubic-bezier(.4,0,.2,1);
         border-radius: .75rem;
         display: block;
-        /* vertical-align: middle; */
         height: auto;
-        /* width: 230px; */
-        aspect-ratio: 10 / 13;
+        aspect-ratio: 12 / 13;
+        width: 100%;
+        max-width: 100%;
   }
 
   .product_list_images {
@@ -1132,7 +1132,7 @@ gap: 20px;
     object-fit: cover;
   }
   .productItem {
-    width: 100%;
+    width: 96%;
     padding: 0px;
     justify-content: normal;
     gap: 0px;
@@ -1164,7 +1164,7 @@ gap: 20px;
     margin: 4px 0;
   }
   .price {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin: 4px 0;
     font-weight: 700;
     letter-spacing: 0;
@@ -1194,7 +1194,7 @@ gap: 20px;
   .product_list_containet h4 {
     margin: 0;
     
-        font-size: 1rem;
+        font-size: 0.8rem;
         letter-spacing: 0.0px;
         padding: 0;
        
