--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -773,7 +773,7 @@ gap: 20px;
 .price_containet .discountPrice {
   color: #f23e14;
   text-decoration: line-through;
-  font-size: 1rem;
+  font-size: .71rem;
   /* margin-top: 12px; */
 }
 
@@ -1164,7 +1164,7 @@ gap: 20px;
     margin: 4px 0;
   }
   .price {
-    font-size: 1rem;
+    font-size: .83rem;
     margin: 4px 0;
     font-weight: 700;
     letter-spacing: 0;
@@ -1177,6 +1177,7 @@ gap: 20px;
   .price_containet {
     
     margin: 0;
+    gap: 5px;
   }
   .discountPrice {
     font-size: 1rem;
