--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -133,7 +133,8 @@
   left: 0;
   right: 0;
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  justify-content: space-evenly;
   align-items: center;
   padding: 10px;
   background-color: #fff;
@@ -608,7 +609,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0.5rem 0;
+  padding: 0.7rem 0;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -731,6 +732,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+  opacity: .8;
  }
 
 
@@ -763,8 +765,8 @@
     display: flex;
   }
   .mobileBottomNav a svg {
-    width: 20px;
-    height: 20px;
+    width: 23px;
+    height: 23px;
   }
 
  
