--- a/styles/components/category.module.css
+++ b/styles/components/category.module.css
@@ -10,6 +10,7 @@
     text-align: center;
     margin: 0px auto;
     max-width: 1200px;
+    background: #fff;
   }
   
   .categoryHeadingContainer {
