--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -362,7 +362,7 @@
   z-index: 999;
   overflow: scroll;
     padding: 0 0 60px 0;
-    width: 70%;
+    width: 85%;
 }
 
 .sidePanel.open {
@@ -402,7 +402,7 @@
 
 .navItems li {
   position: relative; /* Needed for the pseudo-element */
-  margin: 0rem 1rem;
+  margin: 0rem .5rem;
  
 }
  
@@ -493,7 +493,7 @@
 .mobnavbarHeader {
 
   position: relative;
-  margin: 0rem 1.2rem;
+  margin: 0rem .5rem;
 
   padding: 0;
  
@@ -765,8 +765,13 @@
     display: flex;
   }
   .mobileBottomNav a svg {
-    width: 23px;
-    height: 23px;
+    width: 19px;
+    height: 19px;
+    box-shadow: 0 2px 10px rgb(255 247 247 / 10%);
+    /* box-shadow: #f23e14 1px 1px 50px; */
+    font-weight: 100;
+    /* font-family: fangsong; */
+    stroke-width: 1;
   }
 
  
@@ -796,7 +801,7 @@
       gap: 0px !important;
       width: 23px;
         height: 23px;
-        margin: 15px 2rem !important;
+        margin: 15px .5rem !important;
     }
   
     .close_logo_container {
@@ -1027,7 +1032,7 @@
 
 .about {
   position: relative;
-  margin: 0rem 1.2rem;
+  margin: 0rem .5rem;
 }
 .about h4 {
   color: #333;
