--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -756,9 +756,9 @@ gap: 20px;
   gap: 10px;
 }
 
-.price_containet p {
+/* .price_containet p {
   margin: 15px 0 0;
-}
+} */
 
 .price  {
   color: #333;
