--- a/styles/components/category.module.css
+++ b/styles/components/category.module.css
@@ -83,7 +83,7 @@
     /* flex: 0 0 calc(100% / 6);  */
     /* flex: 0 0 calc(100% / 9);  */
     /* 3 items per slide */
-    padding: 0 8px 0 8px;
+    padding: 0 10px 0 0px;
     /* padding: 10px; */
     box-sizing: border-box;
   }
@@ -164,7 +164,7 @@
       margin: 20px 0;
     }
     .categoryHeadingContainer {
-      margin-bottom: 20px;
+      margin-bottom: 5px;
     }
     .categoryHeadingtitle {
       /* margin: 0; */
@@ -195,7 +195,10 @@
        0px 6px 32px rgba(0, 0, 0, .04); */
        padding: 0;
         font-size: .75rem;
-        box-shadow: 0 0 #0000, 0 0 #0000, 0 0 #0000, 0 0 #0000, 0px 1px 112px rgba(0, 0, 0, .04);
+        box-shadow: 0 0 #0000, 
+        0 0 #0000, 0 0 #0000,
+         0 0 #0000,
+          0 2px 2px rgba(0, 0, 0, .04);
         font-size: .875rem;
         line-height: 1.25rem;
         padding-bottom: .5rem;
@@ -204,7 +207,7 @@
         padding-right: .75rem;
         border-bottom-right-radius: 1rem;
         border-bottom-left-radius: 1rem;
-        color: #000;
+        color: inherit;
         opacity: .8;
     }
 
