--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body {
 
 *, :after, :before {
    border: 0 solid #e5e7eb;
-   
+   font-family: ui-monospace;
 }
 
 
@@ -36,7 +36,7 @@ body {
 }
 
 .className {
- font-family: "Urbanist", sans-serif;
+ /* font-family: "Urbanist", sans-serif; */
 }
 
 
