--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -601,7 +601,7 @@
 
 /* Bottom navigation for mobile */
 .mobileBottomNav {
-  position: fixed;
+  /* position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -610,7 +610,27 @@
   justify-content: space-around;
   align-items: center;
   padding: 0.6rem 0;
-  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); */
+
+  position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    /* background-color: #fff; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: .6rem 0;
+    /* box-shadow: 0 -2px 10px rgba(0, 0, 0, .1); */
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255, 1);
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    --tw-shadow: 0px 4px 32px rgba(0, 0, 0, .06);
+    --tw-shadow-colored: 0px 4px 32px var(--tw-shadow-color);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
 }
 
 .mobileBottomNav a,
@@ -648,7 +668,7 @@
 
 
 .activename {
-  font-size: 12px;
+  font-size: 10px;
 }
 
 
@@ -763,6 +783,11 @@
 
   .cartButtonx { 
     display: flex;
+  }
+
+  .mobileBottomNav svg .cat {
+    width: 24px !important;
+    height: 24px !important;
   }
   .mobileBottomNav a svg {
     width: 22px;
