--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -726,7 +726,8 @@
     border-radius: 50%;
     transition: background-color 0.3s ease;
     margin-top: -46px;
-    box-shadow: #f23e14 1px 1px 50px;
+    /* box-shadow: #f23e14 1px 1px 50px; */
+    box-shadow: 1px 1px 20px #f23e14bd;
 }
 
 
