--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -140,6 +140,7 @@
   background-color: #fff;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
   z-index: 10;
+
 }
 
 
@@ -631,6 +632,7 @@
     --tw-shadow-colored: 0px 4px 32px var(--tw-shadow-color);
     --tw-ring-offset-shadow: 0 0 #0000;
     --tw-ring-shadow: 0 0 #0000;
+    gap: 2px;
 }
 
 .mobileBottomNav a,
@@ -668,7 +670,7 @@
 
 
 .activename {
-  font-size: 10px;
+  font-size: 13px;
 }
 
 
@@ -786,10 +788,16 @@
     display: flex;
   }
 
-  .mobileBottomNav svg .cat {
+  .mobileBottomNav  .cat svg {
     width: 24px !important;
     height: 24px !important;
   }
+
+  .mobileBottomNav .homeactive svg {
+    width: 18px !important;
+    height: 18px !important;
+  }
+
   .mobileBottomNav a svg {
     width: 22px;
     height: 22px;
@@ -808,7 +816,7 @@
 
 .mobileBottomNav a span,
 .mobileBottomNav button span {
-  font-size: 10px; 
+  font-size: 13px; 
 }
 
 
