--- a/app/(auth)/Auth.module.css
+++ b/app/(auth)/Auth.module.css
@@ -17,12 +17,13 @@
 
 
 .openButton svg {
-  color: #888;
+  color: #777;
     width: 20px;
     height: 20px;
     box-shadow: 0 2px 10px hsla(0, 100%, 98%, .1);
     font-weight: 100;
     stroke-width: 1.9;
+    opacity: .9;
 }
 
 /* Popup overlay */
