--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -619,7 +619,7 @@
     width: 100%;
     /* background-color: #fff; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     padding: .6rem 0;
     /* box-shadow: 0 -2px 10px rgba(0, 0, 0, .1); */
