--- a/styles/product/productde.module.css
+++ b/styles/product/productde.module.css
@@ -74,12 +74,15 @@ color: #333;
 /* Responsive Design */
 @media (max-width: 768px) {
   .url {
-    font-size: .89rem;
-    word-break: break-all;
-    width: auto;
-    margin: 0;
-    padding: 0 ;
-    gap: 5px;
+    font-size: 1rem;
+        word-break: break-all;
+        width: auto;
+        margin: 0;
+        padding: 0;
+        gap: 5px;
+        margin: 10px 0;
+        font-weight: 400;
+
   }
 
   .url a {
@@ -89,6 +92,12 @@ color: #333;
 
   .homeIcon {
     font-size: 1.2rem;
+    stroke-width: inherit;
+        font-weight: 100;
+        opacity: .9;
+        margin: 0;
+        width: auto;
+        height: 20px;
   }
 
 
@@ -96,9 +105,9 @@ color: #333;
 
 
   .line {
-    padding: 1px;
+    padding: .4px;
     width: 100%;
-    background: #6666661f;
+    background: #66666614;
     margin: 10px 00px;
   }
 
@@ -154,6 +163,7 @@ color: #333;
   .activeThumbnail {
     border-color: rgb(242 62 20);; /* Active color */
     transform: scale(1.05); /* Slight zoom to highlight active */
+    border: 2px solid red;
   }
   
   .thumbnail:hover {
@@ -255,6 +265,8 @@ color: #333;
     border: 1px solid #ddd;
     text-transform: capitalize;
     transition: background-color 0.3s ease, color 0.3s ease;
+    background-color: rgb(247 247 252);
+    color: rgb(31 31 57);
   }
   
   .optionButton.selected {
@@ -333,7 +345,7 @@ color: #333;
   .cartButton, .wishlistButton {
     padding: 10px 20px;
     font-size: 16px;
-    background-color:rgb(242 62 20);
+    background-color: #f8640a;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -369,7 +381,7 @@ color: #333;
     margin: 20px 20px;
     max-width: 1300px;
     padding: 20px;
-    border: 1px solid #555555a5;
+    border: 1px solid #5555551c;
     border-radius: 45px;
   }
   
@@ -416,7 +428,7 @@ color: #333;
   /* width: 100%; */
   border-radius: 20px;
   background: none;
-    border: 1px solid #333;
+    border: 1px solid #33333342;
 }
   
 .tabButton.active {
@@ -454,7 +466,7 @@ color: #333;
   .reviews .review {
     margin-bottom: 20px;
     padding: 10px;
-    background-color: #f9f9f9;
+    background-color: #fefefe;
     border-radius: 5px;
   }
   
@@ -508,7 +520,7 @@ color: #333;
     text-transform: capitalize;
     margin-bottom: 5px;
     font-weight: 700;
-    color: #333;
+    color: inherit;
   }
 
 
@@ -965,6 +977,7 @@ color: #333;
     transition: transform .3s ease;
     position: relative;
     border-radius: 0px;
+    max-width: 400px;
  }
 
   .arrowButton {
@@ -995,22 +1008,15 @@ color: #333;
       gap: 10px;
         flex-wrap: wrap;
         margin: 10px;
+        font-size: .875rem;
     }
     .productDescriptionContainer p{
      
-    line-height: normal;
-    margin-bottom: 5px;
-   
-    color: #000;
-   
-    font-family: '__Inter_d65c78';
-    text-transform: capitalize;
-    padding: 0 0;
-
-      
-      font-size: 14px;
+      color: inherit;
+      font-family: inherit;
+      padding: 0;
       font-weight: 450;
-    
+      line-height: 1.5;
 
     }
   
@@ -1038,8 +1044,8 @@ color: #333;
       display: none;
     }
     .reviewHeader {
-      flex-direction: column;
-      align-items: flex-start;
+     
+      gap: 3px;
     }
 
     .productList {
@@ -1047,6 +1053,9 @@ color: #333;
     }
     .actions {
       justify-content: space-around;
+      flex-direction: column;
+        align-items: center;
+        width: 100%;
     }
 
   }
@@ -1062,11 +1071,16 @@ color: #333;
 
     .cartButton, .wishlistButton {
       gap: 5px;
-        font-size: .9rem;
+      font-size: 1.3rem;
+      width: 100%;
+      align-items: center;
+      text-align: center;
+      display: flex;
+      justify-content: flex-start;
     }
     .cartButton svg, .wishlistButton svg {
-      height: 20px;
-      width: 20px;
+      height: 28px;
+      width: 28px;
 
     }
 
@@ -1100,7 +1114,8 @@ color: #333;
         border-radius: 10px;
         padding: 2px;    
         transform: scale(1);
-      
+        width: 100px;
+        height: 100px;
     }
     .arrowButton {
       background: none;
@@ -1137,7 +1152,7 @@ color: #333;
     font-size: 1.3rem;
     margin: 10px 10px 0 0;
     display: flex;
-        gap: 5px;
+        gap: 2px;
     }
     .rating h3 {
       display: none;
@@ -1146,7 +1161,8 @@ color: #333;
     .productcontent p {
       font-size: 14px;
       line-height: 2rem;
-        margin-bottom: 0;
+      margin-bottom: 0;
+      font-weight: 550;
     }
   
     .productpricecontent {
@@ -1154,13 +1170,15 @@ color: #333;
     }
 
     .options {
-      margin: 10px 0;
+      margin: 5px 0;
     }
     
     .options h3 {
-      margin:  0;
-      font-weight: 450;
-      width: unset;
+      margin: 0;
+      
+        width: unset;
+        color: inherit;
+        font-weight: 750;
     }
     
     .optionsContainer {
@@ -1172,7 +1190,11 @@ color: #333;
     }
 
     .optionButton {
-      padding: 5px;   
+      padding: 5px;
+      border-radius: 10px;
+      border: none;
+      font-size: .75rem;
+      font-family: inherit;
     }
   }
 
