--- a/styles/components/Loader2.module.css
+++ b/styles/components/Loader2.module.css
@@ -15,7 +15,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3); /* Light transparent background */
+    background: rgb(255, 252, 253); 
     display: flex;
     justify-content: center;
     align-items: center;
