--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -1132,6 +1132,14 @@
   .logo {
     font-size: 2rem;
     display: flex;
+    width: 120px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .logo img {
+    width: 100%;
+    height: 100%;
   }
 
   /* .navItems li {
