--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -1108,6 +1108,17 @@
     color: #040131;
 }
 
+.logo {
+  width: 150px;
+  padding: 0;
+  margin: 0;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+
 @media (min-width: 768px) {
 
  
