--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -92,7 +92,7 @@
   align-items: center;
   gap: 20px;
   /* padding: 11px; */
-  padding: 15px;
+  padding: 10px 15px;
   background-color: #fff;
   position: fixed; /* Fix to top */
   top: 0;
@@ -841,10 +841,11 @@
     .close_logo_container {
       width: 90%;
       gap: 0%;
+      align-items: baseline;
     }
 
     .navbarHeader {
-      gap: 7%;
+      gap: 8%;
     }
 }
 
@@ -1109,7 +1110,7 @@
 }
 
 .logo {
-  width: 150px;
+  width: 120px;
   padding: 0;
   margin: 0;
 }
