--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -632,7 +632,7 @@
     --tw-shadow-colored: 0px 4px 32px var(--tw-shadow-color);
     --tw-ring-offset-shadow: 0 0 #0000;
     --tw-ring-shadow: 0 0 #0000;
-    gap: 12px;
+    gap: 0px;
 }
 
 .mobileBottomNav a,
@@ -693,13 +693,14 @@
 
 
 .mainiconmob {
-  width: 26px;
-    height: 26px;
+  width: 22px;
+    height: 22px;
     color: #fff;
     transition: color 0.3s ease, transform 0.3s ease;
     cursor: pointer;
     /* position: absolute; */
     top: 0;
+    stroke-width: 1.5;
 }
 
 
@@ -747,7 +748,7 @@
     color: #000;
   border-radius: 50%;
   /* padding: 2px 5px; */
-  font-size: 0.95rem !important;
+  font-size: 0.65rem !important;
   /* color: #333; */
   width: 15px;
     height: 15px;
@@ -799,13 +800,13 @@
   }
 
   .mobileBottomNav a svg {
-    width: 22px;
-    height: 22px;
+    width: 23px;
+    height: 23px;
     box-shadow: 0 2px 10px rgb(255 247 247 / 10%);
     /* box-shadow: #f23e14 1px 1px 50px; */
     font-weight: 100;
     /* font-family: fangsong; */
-    stroke-width: 1.9;
+    stroke-width: 1.5;
   }
 
  
@@ -954,7 +955,14 @@
 
 
 .userActive {
-  color: #666666; /* Active color when user is logged in */
+  color: #666666; 
+  opacity: 0.7;
+}
+
+.activenameloing {
+  color: #666666;
+  opacity: 0.7;
+  font-size: 12px;
 }
 
 .activeDot {
