--- a/styles/components/banners.module.css
+++ b/styles/components/banners.module.css
@@ -1,9 +1,9 @@
 .bannerContainer {
     position: relative;
     max-width: 1200px;
-    margin: 50px auto 0 auto;
+    /* margin: 50px auto 0 auto; */
     overflow: hidden;
-    padding: 20px;
+    padding: 0px;
     /* background: red; */
   }
   
@@ -210,7 +210,7 @@
    
     .bannerContainer {
       padding: 0px;
-      margin: 80px auto 0;
+      margin: 0px auto 0;
     }
     .bannerImages {
    
