--- a/styles/home/CartSidebar.module.css
+++ b/styles/home/CartSidebar.module.css
@@ -5,7 +5,7 @@
   width: 500px;
   height: 100%;
   background-color: #fff;
-  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
+  /* box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1); */
   padding: 20px;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
