--- a/app/(auth)/Auth.module.css
+++ b/app/(auth)/Auth.module.css
@@ -17,7 +17,7 @@
 
 
 .openButton svg {
-  color: #666666; 
+  color: #999; 
     width: 20px;
     height: 20px;
     box-shadow: 0 2px 10px hsla(0, 100%, 98%, .1);
@@ -74,8 +74,9 @@
 
 @media (max-width: 550px) {
   .popup {
-    width: auto;
-    height: 99vh;
+    width: 100%;
+    top: -10%;
+    /* height: 99vh; */
   }
   .popupContent {
    
