--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -92,7 +92,7 @@
   align-items: center;
   gap: 20px;
   /* padding: 11px; */
-  padding: 10px 15px;
+  padding: 8px 15px;
   background-color: #fff;
   position: fixed; /* Fix to top */
   top: 0;
@@ -621,7 +621,8 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: .6rem 0;
+    /* padding: .6rem 0; */
+    padding: .6rem 0 .2rem 0;
     /* box-shadow: 0 -2px 10px rgba(0, 0, 0, .1); */
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255, 1);
@@ -652,7 +653,8 @@
     /* background: red; */
     justify-content: center;
     align-items: center;
-    gap: 3px;
+    gap: .5px;
+    font-weight: 450;
 }
 
 .mobileBottomNav a svg {
@@ -964,7 +966,7 @@
 
 .userActive {
   color: #666666; 
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .activenameloing {
@@ -1129,9 +1131,12 @@
 }
 
 .logo {
-  width: 120px;
+  width: 100px;
   padding: 0;
   margin: 0;
+  gap: 0;
+  display: flex;
+  position: static;
 }
 
 .logo img {
