--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -616,16 +616,15 @@
   position: fixed;
     bottom: 0;
     left: 0;
-    width: 100%;
-    /* background-color: #fff; */
+    right: 0;
+    width: auto;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     /* padding: .6rem 0; */
-    padding: .6rem 0 .2rem 0;
+    padding: .6rem;
     /* box-shadow: 0 -2px 10px rgba(0, 0, 0, .1); */
     --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255, 1);
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
@@ -715,7 +714,7 @@
   color: #fff;
     font-size: 1.5rem;
     text-decoration: none;
-  
+    margin-right: -15px;
     border: none;
     cursor: pointer;
     display: flex;
@@ -965,7 +964,7 @@
 
 
 .userActive {
-  color: #999; 
+  color: #9b9b9b; 
   opacity: 1;
 }
 
