--- a/styles/components/category.module.css
+++ b/styles/components/category.module.css
@@ -187,6 +187,8 @@
     
     .previewImage { 
       width: 105px;
+      opacity: .9;
+      filter: drop-shadow(0px 0px 20px #fff);
     }
     .categoryheading {
       /* padding: 0 0;
