--- a/styles/components/Nav2.module.css
+++ b/styles/components/Nav2.module.css
@@ -121,6 +121,15 @@
   background-color: rgba(0, 0, 0, 0.8); /* Adjust based on your design */
   transition: transform 0.3s ease;
   transform: translateX(-100%); /* Hidden by default */
+  overflow: scroll;
+scrollbar-width: none;
+-ms-overflow-style: none;
+}
+
+
+
+.sidePanel::-webkit-scrollbar {
+display: none; /* For Chrome, Safari, and Opera */
 }
 
 .sidePanel.open {
@@ -622,7 +631,7 @@
     justify-content: space-around;
     align-items: center;
     /* padding: .6rem 0; */
-    padding: .6rem;
+    padding: .8rem;
     /* box-shadow: 0 -2px 10px rgba(0, 0, 0, .1); */
     --tw-bg-opacity: 1;
     --tw-bg-opacity: 1;
@@ -714,7 +723,7 @@
   color: #fff;
     font-size: 1.5rem;
     text-decoration: none;
-    margin-right: -15px;
+    margin-right: 18px;
     border: none;
     cursor: pointer;
     display: flex;
