--- a/styles/product/productde.module.css
+++ b/styles/product/productde.module.css
@@ -80,6 +80,7 @@ color: #333;
         margin: 0;
         padding: 0;
         gap: 5px;
+        /* margin: 10px 0 10px; */
         margin: 20px 0 10px;
         font-weight: 550;
 
@@ -966,7 +967,7 @@ color: #333;
     grid-template-columns: 1fr;
    margin: 60px 0 10px 0;
      padding: 0px;
-     gap: 10px;
+     gap: 5px;
   }
 
  .mainImage { 
@@ -1211,7 +1212,7 @@ color: #333;
         font-family: inherit;
         line-height: 1;
         padding: 10px 10px;
-        font-size: .85rem;
+        font-size: .75rem;
     }
   }
 
