--- a/styles/product/productde.module.css
+++ b/styles/product/productde.module.css
@@ -51,12 +51,15 @@ color: #333;
 /* URL Links */
 .url a {
   text-decoration: none;
-  color: #333;
+  /* color: #333; */
   display: flex;
   align-items: center;
   gap: 5px;
   transition: color 0.3s ease;
   margin: 10px 0;
+  font-family: inherit;
+  color: #1f1f39;
+  line-height: 1;
 }
 
 /* Link Hover Effect */
